--- a/Mitt-CV.html
+++ b/Mitt-CV.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <img src="IMG_0910.JPG" width="15%"></a>
+    <img src="G.JPG" width="20%"></a>
     <title>CV Gustav Skogström</title>
 </head>
 <body>
@@ -15,24 +15,24 @@
                 <h1>Gustav Skogström</h1>
                 <h2>Om mig</h2>
                 <p>
-                Jag är en 19 årig kille från Väranmo som tog studenten från Finnvedenskola i år. På figy så gick jag Ekonomi programmet men märkte efter 3 år att det var inget för mig, så jag började studera programmering som tog mig hit till Webbutveckling .Net. 
+                Jag är en 19 årig kille från Väranmo som tog studenten från Finnvedensgymnasium i våras. Där gick jag Ekonomiprogrammet men märkte efter 3 år att det var inget för mig, så jag började studera programmering som tog mig hit till Webbutveckling .Net. 
                 <br />
                 <br />
-                Jag skulle kunna säga att jag är en perfektionist, genom att ta en titt på mina äldre arbeten jag har gjort, jag skulle också säga att jag är determined. 
+                Jag skulle kunna säga att jag är en perfektionist, genom att ta en titt på mina äldre arbeten jag har gjort, jag skulle också säga att jag är "determined". 
                 </p>
             </div>
             <div class="experince">
                 <h2>
                     Erfarenheter
                 </h2>
+                <p>Jag har precis tagit studenten så jag har inte kommit ut i arbetslivet ännu.</p>
                 <ul>
-                    <li>Ekonomi - waddawdad awdawdad</li>
-                    <li>Ekonomu - ddawdawdad awdadwda</li>
-                    <li>Ekonomi - awdadasd dwadawda</li>
-                    <li>Ekonomi - adwdadawd ddwawdawd</li>
+                    <li>Ekonomi - 3 årig linje</li>
+                    <li>Webbutveckling .NET - Pågående</li>
                 </ul>
             </div>
         </div>    
+
         <div class="third">
             <h2>
                 Hur jag gjorde
@@ -50,14 +50,16 @@
                     <li>esf</li>
                 </ul>
             </div>
-        </div>
-        </div>
+        </div> 
         <div class="contact">
+            <h2>
+                Kontakt information
+            </h2>
             <ul>
-            <li></li> Telephone: 073-508    68 30
-            <li></li> email: gustav.      skogstrom@gmail.com
+            <li></li> Telephone: 073-508 68 30
+            <li></li> email: gustav.skogstrom@gmail.com
             <li></li> Insta: gustavskogstrom
-            <li></li> Epost: skgu22he@student.  ju.se
+            <li></li> Epost: skgu22he@student.ju.se
             </ul>
         </div>
     </div>
