--- a/Mitt-CV.html
+++ b/Mitt-CV.html
@@ -35,19 +35,19 @@
 
         <div class="third">
             <h2>
-                Hur jag gjorde
+                Hur jag gjorde denna hemsida
             </h2>
                 <p class="fel">
-                Hur jag gjorde upgiften,
+                Jag började med att rita upp en bild med paper och penna. När jag hade bestämmt mig för hur min hemsida skall se ut så började jag.
+                Det första jag gjorde var att lägga upp alla element, och 
                 <p>
             <div class="links">
                 <h2>
                     Länkar till arbeten
                 </h2>
                 <ul>
-                    <li>dgagdf</li>
-                    <li>esfsfse<f</li>
-                    <li>esf</li>
+                    <li><a href="https://gustavskogstrom.github.io/uppgift1_html-/">Html uppgift namn: uppgift1_html</a></li>
+                    <li><a href="https://github.com/gustavskogstrom">Min Github-profil</a></li>
                 </ul>
             </div>
         </div> 
