--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <img src="G.JPG" width="20%"></a>
     <title>CV Gustav Skogström</title>
 </head>
 <body>
@@ -51,6 +50,9 @@
                 </ul>
             </div>
         </div> 
+        <div class="bild">
+            <img src="G.JPG"></a>
+        </div>
         <div class="contact">
             <h2>
                 Kontakt information
