--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </div> 
         <div class="contact">
-            <img src="G.JPG"></a>
+            <img src="G.JPG">
             <h2>
                 Kontakt information
             </h2>
