--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    
     <title>CV Gustav Skogström</title>
 </head>
 <body>
     <div class="main">
         <div class="contact">
-            <img src="G.JPG">
+            <img src="G.JPG" >
             <h2>
                 Kontakt information
             </h2>
+            <div class="list">
             <ul>
                 <li></li> Telephone: 073-508 68 30
                 <li></li> email: gustav.skogstrom@gmail.com
                 <li></li> Insta: gustavskogstrom
                 <li></li> Epost: skgu22he@student.ju.se
             </ul>
+            </div>
         </div>
         <div class="second">
             <div class="information">
