--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             <h2>
                 Hur jag gjorde denna hemsida
             </h2>
-                <p class="fel">
-                Jag började med att rita upp en bild med paper och penna. När jag hade bestämmt mig för hur min hemsida skall se ut så började jag.
-                Det första jag gjorde var att lägga upp alla element, och 
+                <p class="hemsida">
+                Jag började med att rita upp en bild på ett paper, när jag hade bestämmt mig för hur min hemsida skall se ut så började jag.
+                Jag började med att skapa en .main som hela sidan sku 
                 <p>
             <div class="links">
                 <h2>
