--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             </div>
         </div>
         <div class="second">
-            <div class="information">
+            <div>
                 <h1>Gustav Skogström</h1>
                 <h2>Om mig</h2>
                 <p>
                 Jag är en 19 årig kille från Väranmo som tog studenten från Finnvedensgymnasium i våras. Där gick jag Ekonomiprogrammet men märkte efter 3 år att det var inget för mig, så jag började studera programmering som tog mig hit till Webbutveckling .Net. 
-                <br />
-                <br />
+                </p>
+                <p>
                 Jag skulle kunna säga att jag är en perfektionist, genom att ta en titt på mina äldre arbeten jag har gjort, jag skulle också säga att jag är "determined". 
                 </p>
             </div>
-            <div class="experince">
+            <div>
                 <h2>
                     Erfarenheter
                 </h2>
@@ -46,16 +46,32 @@
                 </ul>
             </div>
         </div>    
-
         <div class="third">
             <h2>
                 Hur jag gjorde denna hemsida
             </h2>
-                <p class="hemsida">
-                Jag började med att rita upp en bild på ett paper, när jag hade bestämmt mig för hur min hemsida skall se ut så började jag.
-                Jag började med att skapa en .main som hela sidan sku 
                 <p>
-            <div class="links">
+                Jag började med att rita upp en bild på ett paper, när jag hade bestämmt mig för hur min hemsida skall se ut så började jag.
+                Jag började med att skapa en .main som hela sidan skulle vara på, så bestämde jag storleken på sidan samt gjorde den till en flexbox.
+                </p>
+                <p>
+                Nu var jag redo att skapa de tre sidorna som jag har planerat sedan tidigare, så jag skapade 3 divs som jag gjorde till flexbox.
+                Det som jag planerade var att göra flera divs i varje box så det var de jag gjorde.
+                Nu när jag hade de tre sidor så gjorde jag 2 divs i varje flexbox, så jag kunde modifiera varje del.
+                </p>
+            <h2>
+                Min CSS
+            </h2>
+            <p>
+                I min ul list som är i min första box (.contact), så skapade jag en div för att kunna modifiera den listan utan att påverka de andra listorna jag har på min sida (.list li).
+            </p>
+            <p>
+                I andra 
+            </p>
+            <p>
+                I tredje 
+            </p>
+            <div>
                 <h2>
                     Länkar till arbeten
                 </h2>
