--- a/index.html
+++ b/index.html
@@ -4,41 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    
+    <link rel="stylesheet" href="style.css" >
     <title>CV Gustav Skogström</title>
 </head>
 <body>
     <div class="main">
         <div class="contact">
-            <img src="G.JPG" >
+            <div class="bild">
+                <img src="G.JPG">
+            </div>
             <h2>
                 Kontakt information
             </h2>
             <div class="list">
-            <ul>
+            <ul> 
                 <li></li> Telephone: 073-508 68 30
                 <li></li> email: gustav.skogstrom@gmail.com
                 <li></li> Insta: gustavskogstrom
                 <li></li> Epost: skgu22he@student.ju.se
-            </ul>
+            </ul> <!--Länkar med information vart de tar än-->
             </div>
         </div>
         <div class="second">
             <div>
-                <h1>Gustav Skogström</h1>
-                <h2>Om mig</h2>
-                <p>
+                <h1>Gustav Skogström</h1> <!--Headline på mitten sidan-->
+                <h2>Om mig</h2> <!--En headline som talar om ämnet-->
+                <p> 
                 Jag är en 19 årig kille från Väranmo som tog studenten från Finnvedensgymnasium i våras. Där gick jag Ekonomiprogrammet men märkte efter 3 år att det var inget för mig, så jag började studera programmering som tog mig hit till Webbutveckling .Net. 
-                </p>
+                </p> <!--Pararaph text om ämnet-->
                 <p>
                 Jag skulle kunna säga att jag är en perfektionist, genom att ta en titt på mina äldre arbeten jag har gjort, jag skulle också säga att jag är "determined". 
-                </p>
+                </p> <!--Pararaph text om ämnet-->
             </div>
             <div>
-                <h2>
-                    Erfarenheter
-                </h2>
+                <h2>Erfarenheter</h2> <!--En headline som talar om ämnet-->
                 <p>Jag har precis tagit studenten så jag har inte kommit ut i arbetslivet ännu.</p>
                 <ul>
                     <li>Ekonomi - 3 årig linje</li>
@@ -47,34 +46,25 @@
             </div>
         </div>    
         <div class="third">
-            <h2>
-                Hur jag gjorde denna hemsida
-            </h2>
-                <p>
-                Jag började med att rita upp en bild på ett paper, när jag hade bestämmt mig för hur min hemsida skall se ut så började jag.
+            <h2>Hur jag gjorde denna hemsida</h2> <!--En headline som talar om ämnet-->
+            <p>
+                Jag började med att rita upp en bild på ett paper, när jag hade bestämt mig för hur min hemsida skall se ut så började jag.
                 Jag började med att skapa en .main som hela sidan skulle vara på, så bestämde jag storleken på sidan samt gjorde den till en flexbox.
-                </p>
-                <p>
+            </p>
+            <p>
                 Nu var jag redo att skapa de tre sidorna som jag har planerat sedan tidigare, så jag skapade 3 divs som jag gjorde till flexbox.
                 Det som jag planerade var att göra flera divs i varje box så det var de jag gjorde.
-                Nu när jag hade de tre sidor så gjorde jag 2 divs i varje flexbox, så jag kunde modifiera varje del.
-                </p>
-            <h2>
-                Min CSS
-            </h2>
+                Nu när jag hade de tre sidor så gjorde jag 2 divs i varje flexbox, så jag kunde modifiera varje del om det behövdes.
+            </p> <!--Pararaph text om ämnet-->
+            <h2>Min CSS</h2> <!--En headline som talar om ämnet-->
             <p>
                 I min ul list som är i min första box (.contact), så skapade jag en div för att kunna modifiera den listan utan att påverka de andra listorna jag har på min sida (.list li).
-            </p>
+            </p> <!--Pararaph text om ämnet-->
             <p>
-                I andra 
-            </p>
-            <p>
-                I tredje 
-            </p>
+                I andra .second och .third så har jag inte gjort så stora ändringar. Jag har ändrat h1 och h2 för att vara centraliserade på de raderna de är på, min bild är också centraliserad som är på första sidan..
+            </p> <!--Pararaph text om ämnet-->
             <div>
-                <h2>
-                    Länkar till arbeten
-                </h2>
+                <h2>Länkar till arbeten</h2> <!--En headline som talar om ämnet-->
                 <ul>
                     <li><a href="https://gustavskogstrom.github.io/uppgift1_html-/">Html uppgift namn: uppgift1_html</a></li>
                     <li><a href="https://github.com/gustavskogstrom">Min Github-profil</a></li>
