--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" >
     <title>CV Gustav Skogström</title>
 </head>
-<body>
+<body> <!--Här börjar body, det som skrivs-->
     <div class="main">
         <div class="contact">
             <div class="bild">
@@ -42,7 +42,7 @@
                 <ul>
                     <li>Ekonomi - 3 årig linje</li>
                     <li>Webbutveckling .NET - Pågående</li>
-                </ul>
+                </ul> 
             </div>
         </div>    
         <div class="third">
@@ -68,7 +68,7 @@
                 <ul>
                     <li><a href="https://gustavskogstrom.github.io/uppgift1_html-/">Html uppgift namn: uppgift1_html</a></li>
                     <li><a href="https://github.com/gustavskogstrom">Min Github-profil</a></li>
-                </ul>
+                </ul> <!--Länkar med information vart de tar än-->
             </div>
         </div> 
     </div>
