--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" >
-    <title>CV Gustav Skogström</title>
+    <link rel="stylesheet" href="style.css" > <!--CSS länk som kopplar CSS till html-->
+    <title>CV Gustav Skogström</title> <!--Hemsidans titel på sidan, (syns inte på sidan)-->
 </head>
 <body> <!--Här börjar body, det som skrivs-->
     <div class="main">
         <div class="contact">
             <div class="bild">
-                <img src="G.JPG">
+                <img rel="Bild" src="G.JPG"> <!--Bild på mig-->
             </div>
             <h2>
                 Kontakt information
             </h2>
             <div class="list">
             <ul> 
-                <li></li> Telephone: 073-508 68 30
-                <li></li> email: gustav.skogstrom@gmail.com
-                <li></li> Insta: gustavskogstrom
-                <li></li> Epost: skgu22he@student.ju.se
+                <li>Telephone: 073-508 68 30</li>
+                <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">Email: gustav.skogstrom@gmail.com</a></li>
+                <li><a href="https://www.instagram.com/gustavskogstrom/">instagram: gustavskogstrom</a/li>
+                <li><a href="https://ju.instructure.com/?login_success=1">Canvas: skgu22he@student.ju.se</a></li>
             </ul> <!--Länkar med information vart de tar än-->
             </div>
         </div>
         <div class="second">
             <div>
                 <h1>Gustav Skogström</h1> <!--Headline på mitten sidan-->
-                <h2>Om mig</h2> <!--En headline som talar om ämnet-->
+                <h2>Om mig</h2> <!--En headline som talar om vad ämnet är-->
                 <p> 
                 Jag är en 19 årig kille från Väranmo som tog studenten från Finnvedensgymnasium i våras. Där gick jag Ekonomiprogrammet men märkte efter 3 år att det var inget för mig, så jag började studera programmering som tog mig hit till Webbutveckling .Net. 
                 </p> <!--Pararaph text om ämnet-->
@@ -37,26 +37,26 @@
                 </p> <!--Pararaph text om ämnet-->
             </div>
             <div>
-                <h2>Erfarenheter</h2> <!--En headline som talar om ämnet-->
+                <h2>Erfarenheter</h2> <!--En headline som talar om vad ämnet är-->
                 <p>Jag har precis tagit studenten så jag har inte kommit ut i arbetslivet ännu.</p>
                 <ul>
                     <li>Ekonomi - 3 årig linje</li>
                     <li>Webbutveckling .NET - Pågående</li>
-                </ul> 
+                </ul> <!--Listor med erfarenheter-->
             </div>
         </div>    
         <div class="third">
-            <h2>Hur jag gjorde denna hemsida</h2> <!--En headline som talar om ämnet-->
+            <h2>Hur jag gjorde denna hemsida</h2> <!--En headline som talar om vad ämnet är-->
             <p>
                 Jag började med att rita upp en bild på ett paper, när jag hade bestämt mig för hur min hemsida skall se ut så började jag.
                 Jag började med att skapa en .main som hela sidan skulle vara på, så bestämde jag storleken på sidan samt gjorde den till en flexbox.
-            </p>
+            </p> 
             <p>
                 Nu var jag redo att skapa de tre sidorna som jag har planerat sedan tidigare, så jag skapade 3 divs som jag gjorde till flexbox.
                 Det som jag planerade var att göra flera divs i varje box så det var de jag gjorde.
                 Nu när jag hade de tre sidor så gjorde jag 2 divs i varje flexbox, så jag kunde modifiera varje del om det behövdes.
             </p> <!--Pararaph text om ämnet-->
-            <h2>Min CSS</h2> <!--En headline som talar om ämnet-->
+            <h2>Min CSS</h2> <!--En headline som talar om vad ämnet är-->>
             <p>
                 I min ul list som är i min första box (.contact), så skapade jag en div för att kunna modifiera den listan utan att påverka de andra listorna jag har på min sida (.list li).
             </p> <!--Pararaph text om ämnet-->
