--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="list">
             <ul> 
                 <li>Telephone: 073-508 68 30</li>
-                <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">Email: gustav.skogstrom@gmail.com</a></li>
-                <li><a href="https://www.instagram.com/gustavskogstrom/">instagram: gustavskogstrom</a/li>
-                <li><a href="https://ju.instructure.com/?login_success=1">Canvas: skgu22he@student.ju.se</a></li>
+                <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox" target="_blank">Email: gustav.skogstrom@gmail.com</a></li>
+                <li><a href="https://www.instagram.com/gustavskogstrom/" target="_blank">instagram: gustavskogstrom</a/li>
+                <li><a href="https://ju.instructure.com/?login_success=1" target="_blank">Canvas: skgu22he@student.ju.se</a></li>
             </ul> <!--Länkar med information vart de tar än-->
             </div>
         </div>
@@ -46,7 +46,7 @@
             </div>
         </div>    
         <div class="third">
-            <h2>Hur jag gjorde denna hemsida</h2> <!--En headline som talar om vad ämnet är-->
+            <h2>Refelktion</h2> <!--En headline som talar om vad ämnet är-->
             <p>
                 Jag började med att rita upp en bild på ett paper, när jag hade bestämt mig för hur min hemsida skall se ut så började jag.
                 Jag började med att skapa en .main som hela sidan skulle vara på, så bestämde jag storleken på sidan samt gjorde den till en flexbox.
@@ -56,7 +56,7 @@
                 Det som jag planerade var att göra flera divs i varje box så det var de jag gjorde.
                 Nu när jag hade de tre sidor så gjorde jag 2 divs i varje flexbox, så jag kunde modifiera varje del om det behövdes.
             </p> <!--Pararaph text om ämnet-->
-            <h2>Min CSS</h2> <!--En headline som talar om vad ämnet är-->>
+            <h2>Min CSS</h2> <!--En headline som talar om vad ämnet är-->
             <p>
                 I min ul list som är i min första box (.contact), så skapade jag en div för att kunna modifiera den listan utan att påverka de andra listorna jag har på min sida (.list li).
             </p> <!--Pararaph text om ämnet-->
@@ -66,8 +66,8 @@
             <div>
                 <h2>Länkar till arbeten</h2> <!--En headline som talar om ämnet-->
                 <ul>
-                    <li><a href="https://gustavskogstrom.github.io/uppgift1_html-/">Html uppgift namn: uppgift1_html</a></li>
-                    <li><a href="https://github.com/gustavskogstrom">Min Github-profil</a></li>
+                    <li><a href="https://gustavskogstrom.github.io/uppgift1_html-/" target="_blank">Html uppgift namn: uppgift1_html</a></li>
+                    <li><a href="https://github.com/gustavskogstrom" target="_blank">Min Github-profil</a></li>
                 </ul> <!--Länkar med information vart de tar än-->
             </div>
         </div> 
