--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </div>    
         <div class="third">
-            <h2>Refelktion</h2> <!--En headline som talar om vad ämnet är-->
+            <h2>Reflektion</h2> <!--En headline som talar om vad ämnet är-->
             <p>
                 Jag började med att rita upp en bild på ett paper, när jag hade bestämt mig för hur min hemsida skall se ut så började jag.
                 Jag började med att skapa en .main som hela sidan skulle vara på, så bestämde jag storleken på sidan samt gjorde den till en flexbox.
