--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </h2>
             <div class="list">
             <ul> 
-                <li>Telephone: 073-508 68 30</li>
+                <li>Telefon: 073-508 68 30</li>
                 <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox" target="_blank">Email: gustav.skogstrom@gmail.com</a></li>
                 <li><a href="https://www.instagram.com/gustavskogstrom/" target="_blank">instagram: gustavskogstrom</a/li>
                 <li><a href="https://ju.instructure.com/?login_success=1" target="_blank">Canvas: skgu22he@student.ju.se</a></li>
@@ -30,7 +30,7 @@
                 <h1>Gustav Skogström</h1> <!--Headline på mitten sidan-->
                 <h2>Om mig</h2> <!--En headline som talar om vad ämnet är-->
                 <p> 
-                Jag är en 19 årig kille från Väranmo som tog studenten från Finnvedensgymnasium i våras. Där gick jag Ekonomiprogrammet men märkte efter 3 år att det var inget för mig, så jag började studera programmering som tog mig hit till Webbutveckling .Net. 
+                Jag är en 19 årig kille från Väranmo som tog studenten från Finnvedensgymnasium i våras. Där gick jag Ekonomiprogrammet men märkte efter tre år att det var inget för mig, så jag började studera programmering som tog mig hit till Webbutveckling .Net. 
                 </p> <!--Pararaph text om ämnet-->
                 <p>
                 Jag skulle kunna säga att jag är en perfektionist, genom att ta en titt på mina äldre arbeten jag har gjort, jag skulle också säga att jag är "determined". 
@@ -40,7 +40,7 @@
                 <h2>Erfarenheter</h2> <!--En headline som talar om vad ämnet är-->
                 <p>Jag har precis tagit studenten så jag har inte kommit ut i arbetslivet ännu.</p>
                 <ul>
-                    <li>Ekonomi - 3 årig linje</li>
+                    <li>Ekonomi - Tre årig linje</li>
                     <li>Webbutveckling .NET - Pågående</li>
                 </ul> <!--Listor med erfarenheter-->
             </div>
@@ -48,20 +48,20 @@
         <div class="third">
             <h2>Reflektion</h2> <!--En headline som talar om vad ämnet är-->
             <p>
-                Jag började med att rita upp en bild på ett paper, när jag hade bestämt mig för hur min hemsida skall se ut så började jag.
+                Jag började med att rita upp en bild på ett papper, när jag hade bestämt mig för hur min hemsida skulle se ut så började jag.
                 Jag började med att skapa en .main som hela sidan skulle vara på, så bestämde jag storleken på sidan samt gjorde den till en flexbox.
             </p> 
             <p>
-                Nu var jag redo att skapa de tre sidorna som jag har planerat sedan tidigare, så jag skapade 3 divs som jag gjorde till flexbox.
-                Det som jag planerade var att göra flera divs i varje box så det var de jag gjorde.
-                Nu när jag hade de tre sidor så gjorde jag 2 divs i varje flexbox, så jag kunde modifiera varje del om det behövdes.
+                Nu var jag redo att skapa de tre sidorna som jag har planerat sedan tidigare, så jag skapade tre divs som jag gjorde till flexbox.
+                Det som jag planerade var att göra flera divs i varje box så det var det jag gjorde.
+                Nu när jag hade de tre sidorna så gjorde jag två divs i varje flexbox, så jag kunde modifiera varje del om det behövdes.
             </p> <!--Pararaph text om ämnet-->
             <h2>Min CSS</h2> <!--En headline som talar om vad ämnet är-->
             <p>
                 I min ul list som är i min första box (.contact), så skapade jag en div för att kunna modifiera den listan utan att påverka de andra listorna jag har på min sida (.list li).
             </p> <!--Pararaph text om ämnet-->
             <p>
-                I andra .second och .third så har jag inte gjort så stora ändringar. Jag har ändrat h1 och h2 för att vara centraliserade på de raderna de är på, min bild är också centraliserad som är på första sidan..
+                I andra .second och .third så har jag inte gjort så stora ändringar. Jag har ändrat h1 och h2 för att vara centraliserade på de raderna som dem är på, min bild på första sidan är också centraliserad.
             </p> <!--Pararaph text om ämnet-->
             <div>
                 <h2>Länkar till arbeten</h2> <!--En headline som talar om ämnet-->
