--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                 Det som jag planerade var att göra flera divs i varje box så det var det jag gjorde.
                 Nu när jag hade de tre sidorna så gjorde jag två divs i varje flexbox, så jag kunde modifiera varje del om det behövdes.
             </p> <!--Pararaph text om ämnet-->
-            <h2>Min CSS</h2> <!--En headline som talar om vad ämnet är-->
+            <h3>Min CSS</h3> <!--En mindre headline som talar om vad ämnet är-->
             <p>
                 I min ul list som är i min första box (.contact), så skapade jag en div för att kunna modifiera den listan utan att påverka de andra listorna jag har på min sida (.list li).
             </p> <!--Pararaph text om ämnet-->
             <p>
-                I andra .second och .third så har jag inte gjort så stora ändringar. Jag har ändrat h1 och h2 för att vara centraliserade på de raderna som dem är på, min bild på första sidan är också centraliserad.
+                I .second och .third så har jag inte gjort så stora ändringar. Jag har ändrat h1, h2 och h3 så att de är centraliserade på de raderna som dem är på, min bild på första sidan är också centraliserad.
             </p> <!--Pararaph text om ämnet-->
             <div>
                 <h2>Länkar till arbeten</h2> <!--En headline som talar om ämnet-->
